# Exp-Website

./: .gitignore  README.md  build.sh  data.py  format.sh  pyproject.toml  requirements.txt  vercel.json
accounts/: admin.py  forms.py  models.py  views.py
accounts/migrations/: 0001_initial.py
backend/: settings.py  urls.py  wsgi.py
content/: admin.py  models.py  views.py
content/migrations/: 0001_initial.py
templates/: base.html
templates/accounts/: sign-in.html
templates/components/: navbar.html
templates/content/: components.html  detail.html  home.html
templates/content/instructor/: index.html
